--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,14 @@
   height: 50px !important;
   font-size: 10px;
 }
+
+.padd {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  paddingBottom: 10px;
+}
+
+body {
+  background-color: #535551;
+}
